# bridgeAI-prediction-service

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: pr.yaml  release.yml  test.yml
charts/prediction-server-chart/: Chart.yaml  values.yaml
charts/prediction-server-chart/templates/: deployment.yaml
src/: alembic.ini  data_models.py  db_connection.py  main.py  utils.py
src/migrations/: env.py
src/migrations/versions/: 2024_09_18_1516-b99c30ad39b6_initial_creation_of_prediction_logs_.py
tests/: test_main.py
