[tool.poetry]
name = "bridgeai-prediction-service"
version = "0.1.0"
description = "Prediction service for the BridgeAI MLOps regression model"
authors = ["DC AI Team <opensource@digicatapult.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
